Fri Aug 23 19:19:44 1996  Ian Lance Taylor  <ian@cygnus.com>

	* checkin.c (Checkin): Copy rcs parameter in case it is freed when
	finfo->rcs is freed.

Fri Aug 23 14:55:41 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* remove.c (remove_fileproc): Revert change of 23 Aug to print
	getwd and finfo->file in message.  The latter is redundant with
	fullname and the former is redundant with fullname and the working
	directory when CVS was invoked.  The implementation was also
	lacking as the getwd call could overflow the buffer.

Fri Aug 23 18:40:35 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* remove.c (cvsremove): fix remove -f for client/server

Fri Aug 23 11:28:27 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* wrapper.c, cvs.h: Remove conflictHook field of WrapperEntry,
	WRAP_CONFLICT in WrapMergeHas, and 'c' option in wrap_add; they
	are never used.

Fri Aug 23 11:41:46 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* server.c (switch_to_user): use #ifdef SETXID_SUPPORT instead of
 	#if SETXID_SUPPORT

Thu Aug 22 14:18:43 1996  Ian Lance Taylor  <ian@cygnus.com>

	* checkin.c (Checkin): Remove local variable xfinfo.  Reparse the
	RCS file after the checkin.  Call RCS_fast_checkout rather than
	RCS_checkout.

	* cvs.h (RCS_FLAGS_LOCK): Don't define.
	(RCS_FLAGS_*): Adjust values to fill in hole left by removal of
	RCS_FLAGS_LOCK.
	* rcs.c (RCS_fast_checkout): Don't check for RCS_FLAGS_LOCK.
	* rcscmds.c (RCS_checkout): Likewise.
	* commit.c (commit_fileproc): Remove rcs local variable.  If
	status is T_MODIFIED, require that finfo->rcs be set, call
	Lock_RCS directly, and don't call locate_rcs.  If adding to a tag,
	require that finfo->rcs be set, and don't call locate_rcs.
	(remove_file): Remove rcs local variable.  Require that finfo->rcs
	be set.  Don't call locate_rcs.  Don't pass RCS_FLAGS_LOCK to
	RCS_checkout; use RCS_lock instead.  Call RCS_fast_checkout rather
	than RCS_checkout.
	(unlockrcs): Use a single rcs parameter rather than two parameters